ingress/site1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site1-ingress
  namespace: user1
spec:
  ingressClassName: nginx
  rules:
  - host: site1.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site1
            port:
              number: 80
