ingress/site2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site2-ingress
  namespace: user2
spec:
  ingressClassName: nginx
  rules:
  - host: site2.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: site2
            port:
              number: 80
